--- a/annotationTools/css/bubble.css
+++ b/annotationTools/css/bubble.css
@@ -10,6 +10,7 @@
 	margin:1em 0 3em;
 	background-color: #fff;
 	border: 4px solid #f00;
+	width: 200px;
 	-webkit-border-radius:20px;
 	-moz-border-radius:20px;
 	border-radius:20px;
@@ -22,7 +23,7 @@
     font-size: 0.7em;
     line-height:1.2em;
     font-weight:400;
-    overflow: auto;
+    overflow: scroll;
 }
 
 /* Variant : for top positioned triangle  */
